css/style.css
/* SMALL MOBILE DEFAULT LAYOUT */
body {
    font-size: 0.7rem;
}

/* *****MAIN***** */

main {
    width: 100%;
    height: calc(100vh - 100px)
}


/* *****SIDEBAR***** */


.sidebar {
    width: 50px;
    align-items: center;
    overflow-y: auto;
    overflow-x: hidden;
}

a>img {
    width: 30px;
}

#playlistItem {
    overflow-y: auto;
    height: 300px;
}

#bigLogo {
    padding: 0.5rem;
    width: 80%;
}

.fa-square-plus {
    font-size: 40px;
}

.sideBottomIcon{
    font-size: 0.9rem;
}





/* *****MAINCONTAINER***** */

.mainContainer {
    width: calc(100% - 50px);
}

.callToAction {
    position: fixed;
    z-index: 99;
    height: 80px;
    width: calc(100% - 50px);
}

.callToAction>div {
    text-align: right;
}

#upgradeBtn {
    width: 150px;
    padding: 0.5rem;
    background-color: transparent;
    color: white;
    border-color: white;
    border-radius: 10px;
    font-size: 0.7rem;
}

#upgradeBtn:hover {
    scale: 1.1;
}

.mainContent {
    margin-top: 80px;
    height: calc(100% - 80px);
    overflow-y: auto;
}


#navigationLink {
    padding: 0.5rem 0;
    font-size: 0.6rem;
}

#navigationLink>a {
    padding: 0.2rem
}

.card {
    padding: 1rem;
    position: relative;

}

.card>img {
    width: 100%;
}

.card :hover+.playOnHover {
    filter: opacity(1);
}


.card>img:hover {
    filter: opacity(0.5);

}

.playOnHover {
    position: absolute;
    left: 50%;
    top: 43%;
    transform: translate(-50%, -50%);
    filter: opacity(0);
    font-size: 35px;
}

#popularArtist>.card>img {
    border-radius: 50%;
}


/* ******FOOTER****** */

footer {
    height: 100px;
    position: relative;
}

#imgBottomBar {
    height: 40px;
}

#leftIcon{
    padding-left: 0.5rem;
    
}

#rightIcon {
    padding-right: 0.5rem;
}


#buttonIcons{
    padding-bottom: 0.5rem;
}

.timeBar {
    background-color: grey;
    width: 100%;
    height: 4px;
    border-radius: 8px;

}

.timeBarSon {
    background-color: lightgray;
    width: 30%;
    height: 100%;
    border-radius: 8px;

}

.timeBarSon:hover {
    background-color: yellowgreen;
}


.handle {
    width: 10px;
    height: 10px;
    border-radius: 20px;
    background-color: white;
    position: absolute;
    margin-left: 3%;
    margin-top: -3px;
    
}



.volumeBar {
    background-color: grey;
    min-width: 30%;
    height: 4px;
    border-radius: 8px;
    
}

.volumeBarSon {
    background-color: lightgray;
    width: 30%;
    height: 100%;
    border-radius: 8px;
    
}
.volumeBar:hover .handle {
    background-color: red;
}

.volumeBar:hover .volumeBarSon {
    background-color: yellowgreen;
}

.scaleonHover {
    color: white;
}

.scaleonHover:hover {
    scale: 1.1;
}

#circle-play {
    font-size: 1.3.rem;
}



/********************************/
/****** RESPONSIVE: MOBILE ******/
@media screen and (min-width: 480px) {

    /* GENERIC UI */

    /* HEADER */

    /* MAIN CONTENT */

    .sidebar {
        width: 200px;
        align-items: start;
        padding-left: 0.5rem;
    }



    .mainContainer {
        width: calc(100% - 200px);
    }

    .callToAction {
        width: calc(100% - 200px);
    }

    /* FOOTER */

    #imgBottomBar {
            height: 60px;
    }

    #buttonIcons {
        font-size: 1rem;
        gap: 1rem;        
    }
}



/********************************/
/****** RESPONSIVE: TABLET ******/
@media screen and (min-width: 768px) {

    /* GENERIC UI */

    /* HEADER */

    /* MAIN CONTENT */

    /* FOOTER */

    #buttonIcons {
        font-size: 1.2rem;
        gap: 1.5rem;
        padding-bottom: 0.5rem;
    }

    #leftIcon{
        font-size: 1.2rem;
        }

    #imgDescription{
        font-size: 0.8rem;
    }


    #rightIcon{
        font-size: 1rem;
        gap: 1.5rem;
    }



    #heart-folder {
        flex-direction: row;
        margin-left: 1rem;
        gap: 1rem;
    }



}

/*********************************/
/****** RESPONSIVE: DESKTOP ******/
@media screen and (min-width: 992px) {

    /* GENERIC UI */

    /* HEADER */

    /* MAIN CONTENT */

    /* FOOTER */

}


/***************************************/
/****** RESPONSIVE: LARGE DESKTOP ******/
@media screen and (min-width: 1201px) {

    /* GENERIC UI */

    /* HEADER */

    /* MAIN CONTENT */

    /* FOOTER */

}

